--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.4
   lottie: ^1.3.0
   animated_text_kit: ^4.2.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
