--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lottie: ^1.3.0
   animated_text_kit: ^4.2.1
   carousel_slider: ^4.1.1
+  convex_bottom_bar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
